fixed spacing in navigation menu

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,38 +1,37 @@
 
 .container {
     width:100%;
-    margin:0 auto;  
+    margin:0 auto;
+
 }
 .
 
 nav ul {
         list-style-type:none;
-            width: 100%;
+            width: 100%;     
+    
         }
         
         nav ul li {
-        float: left;
-        width: 24.5%;
-        height: 3.5em;
-        background-color: dimgray;
-        border-right: .1em solid white;
-        
-        
-        
+        width: 100%;   
+        height: 2em;
+        background-color: white;    
+    
     }
     
 
 nav ul li a {
         text-decoration: none;
         display: block;
-        padding: 1.2em 0 0 0;       
         font-family: 'Work Sans', sans-serif;
+        padding-top: .5em;
         font-size: .5 em;
         text-align: center;
-        color: white;
+        color: dimgray;
+/*        margin-bottom: 1em;*/
     }
 nav a:hover {
         background-color: dimgray;
         color: white;
-        padding: 1.2em 1.2em 1.3em 1.2em;
+/*        padding: 1.2em 1.2em 1.3em 1.2em;*/
     }
